--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -21,61 +21,66 @@
 @color_linear_main: #dcdde1;/* цвет линия */
 
  
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-body {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 0;
-  margin: 0;
-  padding: 0;
-  flex-direction: column;
-  align-items: center;
-  overflow-x: hidden;
-}
+// * {
+//   box-sizing: border-box;
+//   padding: 0;
+//   margin: 0;
+// }
+// body {
+//   display: flex;
+//   justify-content: space-around;
+//   margin-top: 0;
+//   margin: 0;
+//   padding: 0;
+//   flex-direction: column;
+//   align-items: center;
+//   overflow-x: hidden;
+// }
 
-@import url("header.less");
-body {
-  #main { 
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 830px;/* */
-    width: 100%;
-    max-width: 1260px;
-    background: @color_white_main;
-    z-index: 11111;
-  }
-}
-@import url("main-crumbs.less");
-@import url('main-page-general.less');
-@import url("main-page-parts-list-brand.less");
-@import url("main-page-parts-list-pdf.less");
-@import url("main-page-catalog-pdf.less");
-@import url("main-page-array-product-cards.less");
-@import url("main-page-cards-goods.less");
-@import url("main-page-helpful-detail.less");
-@import url("main-pagination.less");
-@import url("main-handbook.less");
-@import url("main-helpful.less");
-@import url('footer.less');
+// @import url("header.less");
+// body {
+//   #main { 
+//     padding: 0;
+//     margin: 0;
+//     display: flex;
+//     flex-direction: column;
+//     min-height: 830px;/* */
+//     width: 100%;
+//     max-width: 1260px;
+//     background: @color_white_main;
+//     z-index: 11111;
+//   }
+// }
 
-@import url("media-header.less");
-@import url("media-main-crumbs");
-@import url("media-main-page-general.less");
-@import url("media-main-page-parts-list-brand.less");
-@import url("media-main-page-parts-list-pdf.less");
-@import url("media-main-page-catalog-pdf.less");
-@import url("media-main-page-array-product-cards.less");
-@import url("media-main-page-cards-goods.less");
-@import url("media-main-page-helpful-detail.less");
-@import url("media-main-pagination.less");
-@import url("media-main-handbook.less");
-@import url("media-main-helpful.less");
-@import url("media-footer.less");
+@import url("qqq.less");
+
+// @import url("main-crumbs.less");
+// @import url('main-page-general.less');
+// @import url("main-page-parts-list-brand.less");
+// @import url("main-page-parts-list-pdf.less");
+// @import url("main-page-catalog-pdf.less");
+// @import url("main-page-array-product-cards.less");
+// @import url("main-page-cards-goods.less");
+// @import url("main-page-helpful-detail.less");
+// @import url("main-pagination.less");
+// @import url("main-handbook.less");
+// @import url("main-helpful.less");
+// @import url('footer.less');
+
+
+@import url("media-qqq.less");
+// @import url("media-header.less");
+// @import url("media-main-crumbs");
+// @import url("media-main-page-general.less");
+// @import url("media-main-page-parts-list-brand.less");
+// @import url("media-main-page-parts-list-pdf.less");
+// @import url("media-main-page-catalog-pdf.less");
+// @import url("media-main-page-array-product-cards.less");
+// @import url("media-main-page-cards-goods.less");
+// @import url("media-main-page-helpful-detail.less");
+// @import url("media-main-pagination.less");
+// @import url("media-main-handbook.less");
+// @import url("media-main-helpful.less");
+// @import url("media-footer.less");
 
 
