--- a/src/styles/media-footer.less
+++ b/src/styles/media-footer.less
@@ -1,44 +1,56 @@
-
 @media (min-width: 540px) and (max-width: 760px) {
     @font-size_main: 15px;
+
     body {
-        .footer{ 
+        .footer {
             .container {
                 .box {
                     margin: 0px 0px;
-                    padding: 5px 10px;   
+                    padding: 5px 10px;
                 }
+
                 .box h4 {
                     font-size: @font-size_main + 2px;
                 }
+
                 .box p {
                     font-size: @font-size_main;
                 }
+
                 .box .social a {
                     font-size: @font-size_main;
-                } 
+                }
+
                 .box .social a i {
                     font-size: @font-size_main + 10px;
                 }
-                .box .address a {
-                    font-size: @font-size_main;
-                } 
-                .box .address a i {
-                    font-size: @font-size_main + 10px;
-                }  
+
                 .box .address a {
                     font-size: @font-size_main;
                 }
-                .box form input, .box form textarea {
+
+                .box .address a i {
+                    font-size: @font-size_main + 10px;
+                }
+
+                .box .address a {
                     font-size: @font-size_main;
-                } 
+                }
+
+                .box form input,
+                .box form textarea {
+                    font-size: @font-size_main;
+                }
+
                 .box form label {
                     font-size: @font-size_main;
                 }
+
                 .box form button {
                     font-size: @font-size_main;
-                }     
+                }
             }
+
             .author {
                 font-size: @font-size_main;
             }
@@ -48,211 +60,60 @@
 
 @media all and (max-width: 539px) {
     @font-size_main: 13px;
+
     body {
-        .footer{ 
+        .footer {
             .container {
                 .box {
                     margin: 0px 0px;
-                    padding: 5px 10px;   
+                    padding: 5px 10px;
                 }
+
                 .box h4 {
                     font-size: @font-size_main + 2px;
                 }
+
                 .box p {
                     font-size: @font-size_main;
                 }
+
                 .box .social a {
                     font-size: @font-size_main;
-                } 
+                }
+
                 .box .social a i {
                     font-size: @font-size_main + 10px;
                 }
-                .box .address a {
-                    font-size: @font-size_main;
-                } 
-                .box .address a i {
-                    font-size: @font-size_main + 10px;
-                }  
+
                 .box .address a {
                     font-size: @font-size_main;
                 }
-                .box form input, .box form textarea {
+
+                .box .address a i {
+                    font-size: @font-size_main + 10px;
+                }
+
+                .box .address a {
                     font-size: @font-size_main;
-                } 
+                }
+
+                .box form input,
+                .box form textarea {
+                    font-size: @font-size_main;
+                }
+
                 .box form label {
                     font-size: @font-size_main;
                 }
+
                 .box form button {
                     font-size: @font-size_main;
-                }     
+                }
             }
+
             .author {
                 font-size: @font-size_main;
             }
         }
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
